# audio-latency-tracker

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: docker-publish.yml  test.yml
audio-latency/: Cargo.toml
audio-latency-ebpf/: Cargo.toml
audio-latency-ebpf/src/: main.rs
audio-latency/src/: config.rs  container.rs  main.rs  metrics.rs  network_discovery.rs  pod_watcher.rs  signature.rs
docs/: GITHUB_SETUP.md
scripts/: analyze_audio_flow.awk  audio_flow_summary.sh  identify_edge_ips.sh  map_edge_ips.awk  process_audio_logs.awk  signature_to_plantuml.awk  trace_audio_path.awk
