[package]
name = "audio-latency"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { workspace = true, features = ["async_tokio"] }
aya-log = { workspace = true }
log = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tokio = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
libc = "0.2"
prometheus = { workspace = true }
axum = { workspace = true }
lazy_static = "1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
hostname = "0.3"
kube = { version = "0.95", features = ["client", "runtime"] }
k8s-openapi = { version = "0.23", features = ["v1_31"] }
futures = "0.3"

[build-dependencies]
aya = { workspace = true }